[tool.poetry]
name = "formulaire"
version = "0.1.0"
description = ""
authors = ["Jean Bertholat <jean.bertholat@alten.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
networkx = "^3.4.2"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
