[tool.poetry]
name = "formulaire"
version = "0.1.0"
description = ""
authors = ["Jean Bertholat <jean.bertholat@alten.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
networkx = "^3.4.2"
pyvis = "^0.3.2"
pydrive = "^1.3.1"
google-auth = "^2.36.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.154.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
